--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@media(max-width: 1420px){
 
 *{
     margin: 0;
@@ -146,9 +145,9 @@ nav h2{
     height: 30px;
     object-fit: cover;
 }
-.container{
+/* .container{
     width: 100%;
-}
+} */
 
 /* TABLE AND CHART */
 .chart{
@@ -283,4 +282,3 @@ nav h2{
     font-weight: 800;
 }
 
-}
